--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
+    "dotenv": "^8.6.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "expresss": "0.0.0",
     "faker": "^5.5.3",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
@@ -37,6 +38,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
+    "querystring": "^0.2.1",
     "sequelize": "^6.3.5",
     "unsplash-js": "^7.0.15"
   },
