--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-authentication",
+  "name": "campus bops",
   "version": "1.0.0",
-  "description": "This is express authentication",
+  "description": "",
   "main": "server.js",
   "directories": {
     "test": "test"
